--- a/templates/wall.html
+++ b/templates/wall.html
@@ -83,6 +83,13 @@
           </ul>
         </div>
       </div>
+
+    <!-- <button id="get-random-number-button">I don't feel lucky</button>
+    <div id="your-lucky-number">
+      your lucky number is <b>7</b>
+    </div> -->
+    
+
     </div>
   </div>
   <!-- /.row -->
@@ -91,10 +98,26 @@
 
 <script src="/static/js/jquery-1.11.0.min.js"></script>
 <!-- jQuery v1.11.0 -->
+  // <script>
+  //   $("#get-random-number-button").click(
+  //       function (evt) {
+  //         alert("you clicked me");            
+          
+  //         $.get("/get_lucky_number_from_flask", 
+  //           function(result) {
+  //             $("#your-lucky-number > b").text(result);
+  //             // $("#your-lucky-number > b").load("/get_lucky_number_from_flask");
+  //           });
+  //       }
+  //     );
+  // </script>
+
 <script src="/static/js/bootstrap-3.2.0.min.js"></script>
 <!-- Bootstrap's JS -->
 <script src="/static/js/wall.js"></script>
 <!-- Message Wall JS -->
+
+
 
 </body>
 
