--- a/templates/wall.html
+++ b/templates/wall.html
@@ -53,12 +53,13 @@
             <button id="message-send" type="submit" class="btn btn-primary">
               Submit 
             </button>
-            <button id="message-reset" type="reset" class="btn btn-primary">
+            <button id="message-reset" type="reset" class="btn btn-danger">
               Reset
             </button>
           </form>
 
           <p id="sent-result" class="alert alert-info"></p>
+          <p id="sent-fail" class="alert alert-danger"></p>
 
         </div>
       </div>
